force-app/main/default/objects/PWChrono_Appraisal_Notification__c/PWChrono_Appraisal_Notification__c.object-meta.xml
<CustomObject>
    <label>Appraisal Notification Recipient</label>
    <nameField>
        <displayFormat>ANR-{0000}</displayFormat>
        <label>Recipient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appraisal Notification Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>