force-app/main/default/objects/PWChrono_Appraisal_Notification__c/fields/Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Appraisal__c</fullName>
    <label>Appraisal</label>
    <referenceTo>PWChrono_Appraisal__c</referenceTo>
    <relationshipLabel>Notification Recipients</relationshipLabel>
    <relationshipName>Notification_Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>