force-app/main/default/objects/PWChrono_Appraisal_Notification__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Observer</fullName>
                <default>true</default>
                <label>Observer</label>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>